--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@ body{
   font-family:  "ヒラギノ角ゴ ProN W3", HiraKakuProN-W3, 游ゴシック, "Yu Gothic", メイリオ, Meiryo, Verdana, Helvetica, Arial, sans-serif;
   margin:0px;
   background-color:#ececec;
+  line-height:30px;
 }
 .title{
   color:#ff006f;
