--- a/main.css
+++ b/main.css
@@ -18,5 +18,5 @@ a{
   color:white;
 }
 .black{color:black;
-  text-decoration-line: underline;
+  text-decoration-line: underline;}
 /*このCSSファイルを変更すればすべてのページのスタイルを変更できます。*/
