--- a/main.css
+++ b/main.css
@@ -21,8 +21,9 @@ body{
 }
 
 a{
-    font-weight:500;
+    font-weight:550;
   color:black;
+  opacity:0.7;
 }
 a.white{
 font-weight:200;color:white;
