--- a/main.css
+++ b/main.css
@@ -42,4 +42,13 @@ text-decoration:none;}
 #sidebartoggle{
   user-select:none;
 }
+.a_news{
+  line-height:20px;
+  font-size:10px;
+}
+.a_news_date{
+  opacity:0.5;
+  vertical-align:middle;
+  line-height:20px;
+}
 /*このCSSファイルを変更すればすべてのページのスタイルを変更できます。*/
